--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kamuridesu</title>
-    <script type="text/javascript" src="scripts/page.js" defer></script>
-    <script type="text/javascript" src="scripts/manifest.js"></script>
-    <script type="text/javascript" src="scripts/loader.js" defer></script>
-    <link rel="stylesheet" href="scripts/vendor/highlight/styles/default.css" />
-    <script src="scripts/vendor/highlight/highlight.min.js"></script>
+    <script type="text/javascript" src="/scripts/loader.js" defer></script>
+    <script type="text/javascript" src="/scripts/page.js" defer></script>
+    <script type="text/javascript" src="/scripts/manifest.js"></script>
+    <link
+      rel="stylesheet"
+      href="/scripts/vendor/highlight/styles/default.css"
+    />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <script src="/scripts/vendor/highlight/highlight.min.js"></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"
