--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
     <title>kamuridesu</title>
     <script type="text/javascript" src="/scripts/loader.js" defer></script>
     <script type="text/javascript" src="/scripts/page.js" defer></script>
