feat: add documentation on baggage tracing propagation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en-us">
-
-<head>
+  <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
@@ -10,18 +9,27 @@
     <script type="text/javascript" src="/scripts/page.js" defer></script>
     <script type="text/javascript" src="/scripts/manifest.js"></script>
     <script src="/scripts/vendor/highlight/highlight.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
-    <script type="text/javascript" src="/scripts/vendor/showdown-highlight/index.js"></script>
-    <link rel="stylesheet" href="/scripts/vendor/highlight/styles/tokyo-night-dark.min.css" />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="/scripts/vendor/showdown-highlight/index.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="/scripts/vendor/highlight/styles/tokyo-night-dark.min.css"
+    />
     <link rel="stylesheet" href="/styles/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="no-js-alert">
-        <container>
-            <h2>Warn:</h2>
-            <p>This site needs javascript to twerk :(</p>
-        </container>
+      <container>
+        <h2>Warn:</h2>
+        <p>This site needs javascript to twerk :(</p>
+      </container>
     </div>
 
     <div id="headerSection" class="header"></div>
@@ -30,9 +38,7 @@
 
     <div id="footerSection" class="footer"></div>
     <script type="text/javascript">
-        document.getElementById("no-js-alert").outerHTML = null;
-        console.log("posts are: ", postsManifests);
+      document.getElementById("no-js-alert").outerHTML = null;
     </script>
-</body>
-
+  </body>
 </html>
